# asyncpg-datalayer

./: .env.test  .gitignore  LICENSE  README.md  USAGE.md  pyproject.toml  release.sh  start-database.sh
.github/actions/run-tests/: action.yml
.github/workflows/: publish-to-pypi.yml  run-tests.yml
src/_migrations/: v001-initial-schema.sql
src/asyncpg_datalayer/: base_repository.py  criteria.py  db.py  db_events.py  db_factory.py  errors.py  json2.py  pagination.py  pagination_and_sorting.py  scrolling.py  types.py  utils.py
src/asyncpg_datalayer/cli/: main.py
src/asyncpg_datalayer/codegen/: README.md  main.py  metadata.py  metadata.sql
src/asyncpg_datalayer/codegen/templates/: facade.tmpl  repository.tmpl
src/asyncpg_datalayer/migrationtool/: README.md  __init__.py  main.py
src/tests/: conftest.py  test_base_repository.py  test_db.py  test_db_events.py  test_db_readonly.py
src/tests/cli/: test_main.py
src/tests/codegen/: test_main.py
src/tests/migrationtool/: test_main.py
