[project]
name = "asyncpg-datalayer"
version = "0.0.0"
description = "Datalayer implementation for Postgres using asyncpg"
authors = [
    { name = "svaponi", email = "10941963+svaponi@users.noreply.github.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "asyncpg (>=0.30.0,<0.31.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "pydantic (>=2.11.1,<3.0.0)",
    "greenlet (>=3.1.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
python-dotenv = "^1.1.0"
testcontainers = "^4.10.0"

[tool.poetry]
packages = [{ include = "asyncpg_datalayer", from = "src" }]
