[project]
name = "asyncpg-datalayer"
version = "0.0.0"
description = "Datalayer implementation for Postgres using asyncpg"
repository = "https://github.com/svaponi/asyncpg-datalayer"
authors = [
    { name = "svaponi", email = "10941963+svaponi@users.noreply.github.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "asyncpg (>=0.30.0,<0.31.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "pydantic (>=2.11.1,<3.0.0)",
    "greenlet (>=3.1.1,<4.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "asyncpg_datalayer", from = "src" }]

[tool.poetry.scripts]
asyncpg_datalayer = "asyncpg_datalayer.cli.main:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
python-dotenv = "^1.1.0"
testcontainers = "^4.10.0"
black = "^25.12.0"

[tool.poetry.group.codegen]
optional = true

[tool.poetry.group.codegen.dependencies]
jinja2 = "^3.1.6"
black = "^25.12.0"

[tool.poetry.extras]
codegen = ["jinja2", "black"]