[project]
name = "asyncpg-datalayer"
version = "0.0.5a0"
description = "Datalayer implementation for Postgres using asyncpg"
repository = "https://github.com/svaponi/asyncpg-datalayer"
authors = [
    { name = "svaponi", email = "10941963+svaponi@users.noreply.github.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "asyncpg (>=0.31.0,<0.32.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "greenlet (>=3.3.0,<4.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "asyncpg_datalayer", from = "src" }]

[tool.poetry.scripts]
asyncpg_datalayer = "asyncpg_datalayer.cli.main:main"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
python-dotenv = "^1.2.1"
testcontainers = "^4.13.3"
black = "^25.12.0"

[tool.poetry.group.fastapi]
optional = true

[tool.poetry.group.fastapi.dependencies]
fastapi = "^0.124.4"

[tool.poetry.group.codegen]
optional = true

[tool.poetry.group.codegen.dependencies]
black = "^25.12.0"
jinja2 = "^3.1.6"

[tool.poetry.extras]
codegen = ["jinja2", "black"]
